--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "@actions/core": "^1.2.4",
     "@actions/github": "^3.0.0",
+    "express": "^4.21.1",
     "jest": "^26.0.1"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node ."
   },
   "author": "jrw@mit.edu",
   "license": "MIT"
